<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switch_iv_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"

            android:text="@string/iv_calculator"
            android:textSize="15sp"
            android:maxLines="1" />

        <Switch
            android:id="@+id/switch_xp_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"

            android:text="@string/experience_calculator"
            android:textSize="15sp"
            android:maxLines="1" />

        <Switch
            android:id="@+id/switch_evolution_calculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"

            android:text="@string/evolution_calculator"
            android:textSize="15sp"
            android:maxLines="1" />

        <Switch
            android:id="@+id/switch_eggs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"

            android:text="@string/eggs"
            android:textSize="15sp"
            android:maxLines="1" />

        <Switch
            android:id="@+id/switch_buddies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"

            android:text="@string/buddies"
            android:textSize="15sp"
            android:maxLines="1" />

        <Switch
            android:id="@+id/switch_appraisal_guide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="20dp"

            android:text="@string/appraisal_guide"
            android:textSize="15sp"
            android:maxLines="1" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btn_start"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"

            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:textAllCaps="false"

            fbutton:buttonColor="@color/fbutton_color_turquoise"
            fbutton:shadowColor="@color/fbutton_color_green_sea"
            fbutton:shadowEnabled="true"
            fbutton:shadowHeight="5dp"
            fbutton:cornerRadius="0dp" />

    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"/>

</RelativeLayout>