<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"

    android:orientation="vertical"
    android:background="@drawable/background_edit_text_round">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7"
            android:padding="4dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"

                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:maxLines="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/power"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:maxLines="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/cast_time"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:maxLines="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/dps"
                android:textColor="@color/primary_text"
                android:textSize="14sp"
                android:maxLines="1" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_moves_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_moves_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>