<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <LinearLayout
        android:id="@+id/container_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_move_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="left"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/text_view_move_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:text="@string/dps"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:singleLine="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_view_move_power"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"

            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/power"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:singleLine="true"
            android:background="@drawable/background_edit_text_round"/>

        <TextView
            android:id="@+id/text_view_move_cast_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"

            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cast_time"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:singleLine="true"
            android:background="@drawable/background_edit_text_round"/>

        <TextView
            android:id="@+id/text_view_move_dps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"

            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/dps"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            android:singleLine="true"
            android:background="@drawable/background_edit_text_round"/>

    </LinearLayout>

</RelativeLayout>